[gd_scene load_steps=2 format=2]

[ext_resource path="res://engine/keybinding.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 215.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 215.0
margin_bottom = 14.0
text = "Click a button to bind another key"

[node name="Action_A" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 215.0
margin_bottom = 38.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Action_A"]
margin_top = 3.0
margin_right = 9.0
margin_bottom = 17.0
text = "A"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/Action_A"]
margin_left = 13.0
margin_right = 25.0
margin_bottom = 20.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action_B" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 215.0
margin_bottom = 62.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Action_B"]
margin_top = 3.0
margin_right = 9.0
margin_bottom = 17.0
text = "B"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/Action_B"]
margin_left = 13.0
margin_right = 25.0
margin_bottom = 20.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action_X" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 66.0
margin_right = 215.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Action_X"]
margin_top = 3.0
margin_right = 8.0
margin_bottom = 17.0
text = "X"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/Action_X"]
margin_left = 12.0
margin_right = 24.0
margin_bottom = 20.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Action_Y" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 215.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Action_Y"]
margin_top = 3.0
margin_right = 7.0
margin_bottom = 17.0
text = "Y"

[node name="Button" type="Button" parent="Panel/ScrollContainer/VBoxContainer/Action_Y"]
margin_left = 11.0
margin_right = 23.0
margin_bottom = 20.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Action_A/Button" to="." method="button_change_key_A"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Action_B/Button" to="." method="button_change_key_B"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Action_X/Button" to="." method="button_change_key_X"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer/Action_Y/Button" to="." method="button_change_key_Y"]
